--- a/notebooks/lesson1-dogs-vs-cats-redux.ipynb
+++ b/notebooks/lesson1-dogs-vs-cats-redux.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dogs vs Cats Redux\n",
+    "Kaggle competition and first homework assignment from fastai MOOC. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -40,57 +48,6 @@
     "path = Path('../data/dogs-vs-cats-redux-kernels-edition/')\n",
     "path_train = path/'train'\n",
     "path_test = path/'test'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fnames = get_image_files(path_train)\n",
-    "fnames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(42)\n",
-    "pat = r'/([^/]+)\\.\\d+.jpg$'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "fastai.vision.data.ImageImageList"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ImageImageList"
    ]
   },
   {
@@ -807,34 +764,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Since test set has no labels, y ends up with a bunch of zeroes.\n",
     "preds, y = learn.get_preds(DatasetType.Test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = 'submission.csv'\n",
-    "\n",
-    "with open(file, 'a') as f:\n",
-    "    f.write('id,label\\n')\n",
-    "    for i in range(1, len(preds) + 1):\n",
-    "        f.write(str(i) + ',' + str(0) + '\\n')"
    ]
   },
   {
@@ -883,68 +818,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['6', '5', '7', '.', 'j', 'p', 'g']"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[i for i in str(data.test_dl.dataset.items[0]).split('/')[-1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_nums = [int(str(i).split('/')[-1][:-4]) for i in data.test_dl.dataset.items]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[int(i) for i in str(data.test_dl.dataset.items[0]).split('/') if i.isdigit()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.float(preds[0][1][1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -975,35 +854,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn.TTA()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<zip at 0x7fe57ac64c80>"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zip(test_nums, dog_proba)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 104,
    "metadata": {},
    "outputs": [],
@@ -1013,13 +863,6 @@
     "    for i, num in enumerate(test_nums):\n",
     "        f.write(str(test_nums[i]) + ',' + str(dog_proba[i]) + '\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
