Update notes on list comprehension for submissions.

--- a/notebooks/lesson1-dogs-vs-cats-redux.ipynb
+++ b/notebooks/lesson1-dogs-vs-cats-redux.ipynb
@@ -400,11 +400,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# it things turn out worse\n",
+    "# if things turn out worse\n",
     "# learn.load('stage-1')\n",
     "learn.save('stage-2')"
    ]
@@ -465,6 +465,14 @@
    ],
    "source": [
     "interp.most_confused(min_val=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Submission\n",
+    "Main issue here is the probabilities tensor is ordered in a way that isn"
    ]
   },
   {
