Create routine to generate submission file.

--- a/notebooks/lesson1-dogs-vs-cats-redux.ipynb
+++ b/notebooks/lesson1-dogs-vs-cats-redux.ipynb
@@ -472,12 +472,39 @@
    "metadata": {},
    "source": [
     "### Creating Submission\n",
-    "Main issue here is the probabilities tensor is ordered in a way that isn"
+    "Main issue here is the probabilities tensor is ordered in a way that isn't obvious. You need to get order of images from the dataset. Here, two lists are created with comprehensions that we can use to generate the submission csv. \n",
+    "\n",
+    "Also, this Kaggle competition, like many others uses log-loss to score submissions. `np.clip` has a pretty significant affect on this so it may be worthwhile to create a function at some point to maximize."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generated_submission(preds, data, filepath='../submission.csv', \n",
+    "                         low=.02, high=.98):\n",
+    "    \"\"\"Generate submission for this competition. \n",
+    "    \n",
+    "    Args:\n",
+    "        low/high: Very low or high scores get punished by log-loss if \n",
+    "            predictor is wrong.\n",
+    "    \"\"\"\n",
+    "    dog_proba = [np.round(np.float(p), 2) for p in (np.clip(preds[:, 1], low, high))]\n",
+    "    test_nums = [int(str(i).split('/')[-1][:-4]) for i in data.test_dl.dataset.items]\n",
+    "    \n",
+    "    with open(filepath, 'w') as f:\n",
+    "        f.write('id,label\\n')\n",
+    "        for i, num in enumerate(test_nums):\n",
+    "            f.write(str(test_nums[i]) + ',' + str(dog_proba[i]) + '\\n')\n",
+    "    print(\"Completed submission creation\")\n",
+    "    print(pd.read_csv(filepath).head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,27 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(preds[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 154,
    "metadata": {
     "scrolled": true
    },
@@ -531,32 +538,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed submission creation\n",
+      "     id  label\n",
+      "0   657   0.98\n",
+      "1  6356   0.78\n",
+      "2  8023   0.98\n",
+      "3  5644   0.98\n",
+      "4  6634   0.02\n"
+     ]
+    }
+   ],
    "source": [
-    "test_nums = [int(str(i).split('/')[-1][:-4]) for i in data.test_dl.dataset.items]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dog_proba = [np.round(np.float(p), 2) for p in (np.clip(preds[:, 1], .02, .98))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = 'submission-2.csv'\n",
-    "with open(file, 'a') as f:\n",
-    "    for i, num in enumerate(test_nums):\n",
-    "        f.write(str(test_nums[i]) + ',' + str(dog_proba[i]) + '\\n')"
+    "generated_submission(preds, data)"
    ]
   },
   {
